[package]
name = "grebe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1"
clap = { version = "4.5.4", features = ["cargo"] }
editdistancek = "1.0.2"
flate2 = "1.0.29"
indicatif = "0.17.8"
itertools = "0.12.1"
pluralizer = "0.4.0"
strum = "0.26"
strum_macros = "0.26"
